# integer-programming

./: .gitignore  run.sh  team.txt
cpp/: CMakeLists.txt  compile.sh  run.sh
cpp/src/: ipinstance.cpp  ipinstance.h  main.cpp  timer.cpp  timer.h
cpp/src/past/: past.cpp
python/src/: ipinstance.py  main.py
python/src/past/: 1_naive.py  2_init_upper_bound.py  3_branching_heuristic.py  4_preprocess.py  5_forced_one.py  6_best_bound.py  7_propagate_forced_choices.py
src/: .gitignore  Cargo.toml  build.rs  build.sh  ipinstance.py  main.py
src/cpp/: CMakeLists.txt  ortools_shim.cc
src/cpp/.cache/clangd/index/: ortools_shim.cc.21C63506CE9DDF2D.idx
src/src/: ffi.rs  lib.rs  main.rs
src/src/instance/: mod.rs  parse.rs
src/src/solver/: mod.rs
